--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,14 +15,13 @@
         android:layout_marginEnd="10dp"
         android:text="Buscar aquí"
         android:textAlignment="center"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023"
-        tools:visibility="gone" />
+        app:layout_constraintVertical_bias="0.023" />
 
     <fragment
         android:id="@+id/map"
@@ -31,7 +30,7 @@
         android:layout_height="798dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,19 +38,21 @@
         map:cameraZoom="10"
         map:uiRotateGestures="true"
         map:uiZoomControls="true"
-        tools:visibility="gone" />
+        tools:visibility="invisible" />
 
     <RelativeLayout
-        android:layout_width="252dp"
-        android:layout_height="487dp"
+        android:id="@+id/popup"
+        android:layout_width="315dp"
+        android:layout_height="567dp"
         android:layout_marginStart="159dp"
         android:layout_marginTop="250dp"
         android:layout_marginEnd="159dp"
         android:layout_marginBottom="250dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:background="#D8FFFFFF"
+        map:layout_constraintBottom_toBottomOf="parent"
+        map:layout_constraintEnd_toEndOf="parent"
+        map:layout_constraintStart_toStartOf="parent"
+        map:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="321dp"
@@ -59,31 +60,36 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="34dp"
-                android:layout_marginLeft="200dp"
-                android:baselineAligned="false"
+                android:layout_width="325dp"
+                android:layout_height="60dp"
+                android:layout_marginLeft="250dp"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="35dp"
-                    android:layout_height="36dp"
-                    android:src="@tools:sample/avatars"
-                    android:textAlignment="gravity" />
+                    android:id="@+id/botonX"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:contentDescription="kehdcljedef"
+                    android:onClick="clickBotonX"
+                    android:src="@drawable/cross"
+                    android:textAlignment="gravity"
+                    map:srcCompat="@drawable/cross"
+                    tools:ignore="TouchTargetSizeCheck" />
             </LinearLayout>
 
             <ImageView
-                android:id="@+id/imageView4"
+                android:id="@+id/imagenPrincipal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@tools:sample/avatars" />
+                android:src="@drawable/cross"
+                map:srcCompat="@drawable/cross" />
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/imagenMapa"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@tools:sample/avatars" />
+                android:src="@drawable/cross"
+                map:srcCompat="@drawable/cross" />
 
             <TextView
                 android:id="@+id/textView"
