--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023" />
+        app:layout_constraintVertical_bias="0.023"
+        tools:visibility="invisible" />
 
     <fragment
         android:id="@+id/map"
@@ -42,12 +43,12 @@
 
     <RelativeLayout
         android:id="@+id/popup"
-        android:layout_width="315dp"
-        android:layout_height="567dp"
+        android:layout_width="310dp"
+        android:layout_height="611dp"
         android:layout_marginStart="159dp"
         android:layout_marginTop="250dp"
         android:layout_marginEnd="159dp"
-        android:layout_marginBottom="250dp"
+        android:layout_marginBottom="200dp"
         android:background="#D8FFFFFF"
         map:layout_constraintBottom_toBottomOf="parent"
         map:layout_constraintEnd_toEndOf="parent"
@@ -55,8 +56,8 @@
         map:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="321dp"
-            android:layout_height="569dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <LinearLayout
@@ -80,33 +81,39 @@
             <ImageView
                 android:id="@+id/imagenPrincipal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="93dp"
                 android:src="@drawable/cross"
                 map:srcCompat="@drawable/cross" />
 
             <ImageView
                 android:id="@+id/imagenMapa"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="93dp"
                 android:src="@drawable/cross"
                 map:srcCompat="@drawable/cross" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/nombre"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:gravity="center"
+                android:text="TextView"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/estado"
+                android:layout_width="match_parent"
+                android:layout_height="43dp"
+                android:layout_marginLeft="15dp"
                 android:text="TextView" />
 
             <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:id="@+id/descripcion"
+                android:layout_width="284dp"
+                android:layout_height="276dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="10dp"
                 android:text="TextView" />
 
         </LinearLayout>
