Popup escondido (version no desarrollador)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,10 +49,12 @@
         android:layout_marginTop="250dp"
         android:layout_marginEnd="159dp"
         android:layout_marginBottom="200dp"
+        android:visibility="invisible"
         map:layout_constraintBottom_toBottomOf="parent"
         map:layout_constraintEnd_toEndOf="parent"
         map:layout_constraintStart_toStartOf="parent"
-        map:layout_constraintTop_toTopOf="parent">
+        map:layout_constraintTop_toTopOf="parent"
+        tools:visibility="invisible">
 
         <LinearLayout
             android:layout_width="319dp"
